# multipass

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: .mcp.json  README.md  marketplace.json  plugin.json
.claude-plugin/commands/: help.md  init.md  mine.md  search.md  status.md
.claude-plugin/hooks/: hooks.json  multipass-precompact-hook.sh  multipass-stop-hook.sh
.claude-plugin/skills/multipass/: SKILL.md
.codex-plugin/: README.md  hooks.json  plugin.json
.codex-plugin/hooks/: multipass-hook.sh
.codex-plugin/skills/help/: SKILL.md
.codex-plugin/skills/init/: SKILL.md
.codex-plugin/skills/mine/: SKILL.md
.codex-plugin/skills/search/: SKILL.md
.codex-plugin/skills/status/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: bump-plugin-version.yml  ci.yml
crates/multipass-aaak/: Cargo.toml
crates/multipass-aaak/src/: lib.rs
crates/multipass-aaak/tests/: brief.rs
crates/multipass-cli/: Cargo.toml
crates/multipass-cli/src/: main.rs
crates/multipass-cli/tests/: cli.rs
crates/multipass-core/: Cargo.toml
crates/multipass-core/src/: config.rs  lib.rs  model.rs  query.rs
crates/multipass-core/tests/: config.rs
crates/multipass-ingest/: Cargo.toml
crates/multipass-ingest/src/: chunk.rs  lib.rs  project.rs
crates/multipass-ingest/tests/: project.rs
crates/multipass-mcp/: Cargo.toml
crates/multipass-mcp/src/: lib.rs
crates/multipass-mcp/tests/: protocol.rs
crates/multipass-store/: Cargo.toml
crates/multipass-store/src/: db.rs  lib.rs  records.rs  search.rs
crates/multipass-store/tests/: store.rs
examples/: HOOKS_TUTORIAL.md  basic_mining.md  basic_mining.py  convo_import.md  convo_import.py  gemini_cli_setup.md  mcp_setup.md
hooks/: README.md  multipass_precompact_hook.sh  multipass_save_hook.sh
mempalace/: version.py
multipass/: README.md  __init__.py  __main__.py  cli.py  config.py  convo_miner.py  dialect.py  entity_detector.py  entity_registry.py  general_extractor.py  hooks_cli.py  instructions_cli.py  knowledge_graph.py  layers.py  mcp_server.py  miner.py  normalize.py  onboarding.py  room_detector_local.py  searcher.py  ship_graph.py  spellcheck.py  split_mega_files.py  version.py
multipass/instructions/: help.md  init.md  mine.md  search.md  status.md
tests/: conftest.py  test_config.py  test_convo_miner.py  test_dialect.py  test_hooks_cli.py  test_mcp_server.py  test_miner.py  test_normalize.py  test_searcher.py  test_split_mega_files.py  test_version_consistency.py
