[package]
name = "multipass-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
multipass-core = { path = "../multipass-core" }
multipass-ingest = { path = "../multipass-ingest" }
multipass-store = { path = "../multipass-store" }
multipass-aaak = { path = "../multipass-aaak" }
multipass-mcp = { path = "../multipass-mcp" }

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "multipass-rs"
path = "src/main.rs"
