[package]
name = "multipass-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
chrono.workspace = true
serde.workspace = true
serde_yaml.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
