[package]
name = "multipass-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
chrono.workspace = true
uuid.workspace = true
walkdir.workspace = true
multipass-core = { path = "../multipass-core" }

[dev-dependencies]
tempfile.workspace = true
