[package]
name = "multipass-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
multipass-core = { path = "../multipass-core" }
multipass-store = { path = "../multipass-store" }

[dev-dependencies]
tempfile.workspace = true
