[package]
name = "multipass-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
chrono.workspace = true
rusqlite.workspace = true
uuid.workspace = true
serde_json.workspace = true
serde.workspace = true
multipass-core = { path = "../multipass-core" }

[dev-dependencies]
tempfile.workspace = true
